welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:6: error: reassignment to val
    a=true
     ^posNeg:8: error: reassignment to val
    a=true
     ^posNeg:9: error: reassignment to val
  }else if(negative=false && a<0 && b<0){
                   ^posNeg:10: error: reassignment to val
    a=true
     ^posNeg:12: error: reassignment to val
    a=false
     ^posNeg:14: error: type mismatch;
 found   : Int
 required: Boolean
  return a
         ^